Maybe fixed cast on mobile

--- a/castMobile.css
+++ b/castMobile.css
@@ -49,7 +49,7 @@ h2 {
     }
 
     #firstOne {
-        margin-top: 500px;
+        margin-top: 600px;
     }
 
 }
